// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFormControlLayoutCustomIcon is rendered as button 1`] = `
<button
  aria-label="aria-label"
  class="ouiFormControlLayoutCustomIcon testClass1 testClass2 ouiFormControlLayoutCustomIcon--clickable"
  data-test-subj="test subject string"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiFormControlLayoutCustomIcon__icon"
    data-ouiicon-type="alert"
  />
</button>
`;

exports[`OuiFormControlLayoutCustomIcon is rendered as span 1`] = `
<span
  aria-label="aria-label"
  class="ouiFormControlLayoutCustomIcon testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    aria-hidden="true"
    class="ouiFormControlLayoutCustomIcon__icon"
    data-ouiicon-type="alert"
  />
</span>
`;

exports[`OuiFormControlLayoutCustomIcon size is rendered 1`] = `
<span
  class="ouiFormControlLayoutCustomIcon"
>
  <span
    aria-hidden="true"
    class="ouiFormControlLayoutCustomIcon__icon"
    data-ouiicon-type="alert"
  />
</span>
`;
